--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,9 @@
     <div id="text" class="text"></div>
     <div id="test"></div>
 </div> -->
+<div id="aboutBack"></div>
 <section class="contentSingle">
+  
   <div class="workDetail">
 
     <section class="main">
@@ -19,8 +21,14 @@
           </p> -->
         </div>
 
-        <div class="main-boxes" id="main-boxes-1"></div>
+
+
         <div class="main-words intro">
+
+          <div class="colorbox" style="background-color: #FFFFFF"></div>
+          <div class="colorbox" style="background-color: #FF76DA"></div>
+          <div class="colorbox" style="background-color: #48F1FF"></div>
+
           <p>
             I’m a South-Korean designer living and working in Seoul and Daejeon. Currently, I’m working in a designer role in IDIM lab. Until recently, I was studying for the master degree in Industrial design. 
             <br>
@@ -33,7 +41,6 @@
           </p>
         </div>
 
-        <div class="main-boxes" id="main-boxes-2"></div>
         <div class="main-words cv">
           <p>
             <span>Educational Background</span>
