--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -29,9 +29,10 @@ h3, ul, a {
     color: $darkgray;
     text-decoration: none;
 }
+
 .text {
     font-size: 18px;
-    color: $black;
+    color: $darkgray;
 }
 
 @media (min-width: 768px) {
