--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,3 +1,87 @@
-<p>
-  intro works!
-</p>
+<div class="cover-back">
+  
+
+  <div class="cover__intro">
+    <div class="logo">
+      <img src="./../../assets/imgs/logo.png">
+    </div>
+
+    <div class="cover__intro__container">
+      <h1 class="title">
+          Creative designer/maker based in South Korea — a designer who embrace constantly advancing techonologies.
+      </h1>
+
+      <div class="intro__link">
+        <a class="" routerLink="/about">Contact information</a>
+        <i class="fas fa-angle-double-right" style="color: #8f8f8f; font-size: 14px;"></i>
+      </div>
+
+    </div>
+
+    <div class="cover__intro__container none">
+      <p>services</p>
+
+      <div class="service">
+        <div class="service__box">
+          <div class="service__box__img">
+            <img src="http://placehold.it/300x300">
+          </div>
+          <h4>dafsdfdasf</h4>
+          <p>asdfasfsdafsadfsaf</p>
+        </div>
+
+        <div class="service__box"></div>
+        <div class="service__box"></div>
+      </div>
+
+    </div>
+
+    <div class="cover__intro__container">
+      <p>Selected work</p>
+
+      <div class="works">
+        <div class="works__box">
+          <a class="works__title" routerLink="/detail/3">
+            Dustatic; Filter Utilizing the Mosquito Net
+          </a>
+        </div>
+        <p>Air cleaner which you attach to your mosquito net to filter out the dust and pollution.</p>
+
+        <div class="works__box">
+          <a class="works__title" routerLink="/detail/7">
+            Musical Train; IKEA-Hacked Musical Toy
+          </a>
+        </div>
+        <p>This project is one of the many wonderful works which hacks IKEA products and provide alternative ideas to people. </p>
+
+        <div class="works__box">
+          <a class="works__title" routerLink="/detail/6">
+            Consumer To Creator, CHI 17'
+          </a>
+        </div>
+        <p>'Consumer to Creator' is a long-term qualitative study following 16 households during a purchasing process of furniture items.</p>
+
+        <div class="works__box">
+          <a class="works__title" routerLink="">
+            (This) Portfolio Site
+          </a>
+        </div>
+        <p>Website designed & made with the latest Javascript Framework, with various experimental features.</p>
+      </div>
+
+      <div class="intro__link">
+        <a class="" routerLink="/works">View all works</a>
+        <i class="fas fa-angle-double-right" style="color: #8f8f8f; font-size: 14px;"></i>
+      </div>
+
+    </div>
+
+    <footer>
+      <p>© 2017–2018 Jundong Park</p>
+    </footer>
+
+  </div>
+  
+
+</div>
+
