--- a/src/app/worksDetail/dustatic/dustatic.component.html
+++ b/src/app/worksDetail/dustatic/dustatic.component.html
@@ -2,7 +2,7 @@
 
   <div class="single__frontImg">
     <div class="single__frontImg__title">
-      <pre class="underline"> Dustatic; <br> Window filter <br> for your health </pre>
+      <pre class="underline"> Dustatic; <br> Filter utilizing <br> the mosquito net</pre>
     </div>
     <div class="single__frontImg__img">
       <img src="./../../../assets/Works/2015_Dustatic/img/pic01.jpg">
