--- a/src/color.scss
+++ b/src/color.scss
@@ -1,6 +1,7 @@
 $black: #333333;
 $white: #fff;
 $gray : #EFEFEF;
-$darkgray : #898989;
+$darkgray : #8f8f8f;
 $blueHL : #48F1FF;
 $pinkHL : #FF76DA;
+$blackTrans : rgba(15,15,15,0.8);
