--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header">
   <div class="header--content">
     <h3>
-      <a class="text" routerLink="/works">
+      <a class="text" routerLink="/intro">
         JUNDONG
       </a>
     </h3>
